==================================
Rilascio 1.69.08    del 08/04/2015
==================================

Aggiunta la chiusura form a ryTabs.

Corretta la gestione della "resize" dei form.

==================================
Rilascio 1.69.07    del 07/04/2015
==================================

Rinominate sotto un oggetto QVR varie funzioni Javascript di ryQuiver.

==================================
Rilascio 1.69.06    del 06/04/2015
==================================

Razionalizzata in parte la posizione delle funzioni ryQuiver.

Corretta la gestione dell'errore al salvataggio nelle maschere di Corsaro.

ryBound: aggiunto autofit e migliorato il sorting.

==================================
Rilascio 1.69.05    del 01/04/2015
==================================

Gestita la "collassabilità" di ryTabs qualora il suo Top non sia zero.

==================================
Rilascio 1.69.04    del 31/03/2015
==================================

Ripensata l'associazione di azioni agli acceleratori di tastiera.

==================================
Rilascio 1.69.03    del 28/03/2015
==================================

Forzatura del ricaricamento delle librerie da server.

Spostamento e ridenominazione di funzioni sotto RYWINZ.

La gestione del "cambio chiave caricata" integrata in ryTabs.

Spostata la funzione qv_geography e ridenominata winzGeography.

==================================
Rilascio 1.69.02    del 23/03/2015
==================================

Ulteriore razionalizzazione delle configurazioni.
Tolto "custconfig.php" e sostituito con i più articolati "_cambusa.php", "_apps.php" e "_filibuster.php".

Tolto "appconfig.php": l'inizializzazione ora è sotto ryWinz (rywinclude.php).

Tolto "config.php" dalle singole applicazioni.

Rifatto lo stile di ryTabs.

==================================
Rilascio 1.69.01    del 19/03/2015
==================================

Aggiunta la possibilità di interagire con autorizzazioni esterne.
