@@ -692,7 +692,7 @@
             this.dataload=function(chain){
                 try{
                     var r,c,fd,vl,reff;
-                    var dd,dm,dy;
+                    var dy,dm,dd,dh,dn;
                     var v=[];
                     var nums=[];
                     var decs=[];
@@ -725,19 +725,24 @@
                             for(c=1;c<=propcols.length;c++){
                                 fd="#"+propname+"_"+r+"_"+c;
                                 vl=v[r-1][propcols[c-1]];
+                                if(typeof vl!="string")
+                                    vl="";
                                 try{
                                     switch(proptyps[c-1]){
                                     case "?":
-                                        if (vl!=0)
+                                        if(parseInt(vl)!=0)
                                             $(fd).html("&#x2714;");
                                         else
                                             $(fd).html("&#x0020;");
                                         break;
                                     case "/":
-                                        if(vl.length>=10){
-                                            dy=vl.substr(0,4);dm=vl.substr(5,2);dd=vl.substr(8,2);
-                                            if( (dd=="01" && dm=="01" && dy=="1900") || (dd=="31" && dm=="12" && dy=="9999") )
+                                        vl=vl.replace(/[^\d]/gi, "").substr(0,8);
+                                        if(vl.length==8){
+                                            dy=vl.substr(0,4);dm=vl.substr(4,2);dd=vl.substr(6,2);
+                                            if(dy<="1900" || dy>="9999")
                                                 $(fd).html("");
+                                            else if(_sessioninfo.dateformat==1)
+                                                $(fd).html(dm+"/"+dd+"/"+dy);
                                             else
                                                 $(fd).html(dd+"/"+dm+"/"+dy);
                                         }
@@ -746,12 +751,15 @@
                                         }
                                         break;
                                     case ":":
-                                        if(vl.length>=10){
-                                            dy=vl.substr(0,4);dm=vl.substr(5,2);dd=vl.substr(8,2);
-                                            if( (dd=="01" && dm=="01" && dy=="1900") || (dd=="31" && dm=="12" && dy=="9999") )
+                                        vl=(vl+"000000").replace(/[^\d]/gi, "").substr(0,14);
+                                        if(vl.length==14){
+                                            dy=vl.substr(0,4);dm=vl.substr(4,2);dd=vl.substr(6,2);dh=vl.substr(8,2);dn=vl.substr(10,2);
+                                            if(dy<="1900" || dy>="9999")
                                                 $(fd).html("");
+                                            else if(_sessioninfo.dateformat==1)
+                                                $(fd).html(dm+"/"+dd+"/"+dy+" "+dh+":"+dn);
                                             else
-                                                $(fd).html(vl.substr(8,2)+"/"+vl.substr(5,2)+"/"+vl.substr(0,4)+" "+vl.substr(11,2)+":"+vl.substr(14,2));
+                                                $(fd).html(dd+"/"+dm+"/"+dy+" "+dh+":"+dn);
                                         }
                                         else{
                                             $(fd).html("");
@@ -1357,12 +1365,19 @@
                 t.css({"visibility":"hidden"});
                 statistics();
             }
-			this.babelcode=function(k){
-				return propcodes[k-1];
+			this.babelcode=function(i){
+				return propcodes[i-1];
 			}
-			this.caption=function(k,c){
-				proptits[k-1]=c;
-                $("#"+propname+"_0_"+k).html(c);
+			this.caption=function(i, t){
+                if(0<i && i <=proptits.length){
+                    if(t==missing){
+                        return proptits[i-1];
+                    }
+                    else{
+                        proptits[i-1]=t;
+                        $("#"+propname+"_0_"+i).html(t);
+                    }
+                }
 			}
             this.raisechangerow=function(){
                 setfocusable();
@@ -1406,16 +1421,70 @@
             this.autofit=function(){
                 setTimeout(autofit);
             }
-            this.captions=function(i, t){
-                if(0<i && i <=proptits.length){
-                    if(t==missing){
-                        return proptits[i-1];
-                    }
-                    else{
-                        proptits[i-1]=t;
-                        $("#"+propname+"_0_"+i).html(t);
+            this.cells=function(r,n,v){
+                var c;
+                if($.isNumeric(n)){
+                    c=n-1;
+                    n=propcols[c];
+                }
+                else{
+                    for(var i=0;i<propcols.length; i++){
+                        if(propcols[i]==n){
+                            c=i;
+                            break;
+                        }
                     }
                 }
+                if(v==missing){
+                    v=this.matrix[r-1][n];
+                    if(typeof v=="string"){
+                        switch(proptyps[c]){
+                        case "?":
+                            v=_bool(v);
+                            break;
+                        case "/":
+                            v=v.replace(/[^\d]/gi, "").substr(0,8);
+                            break;
+                        case ":":
+                            v=(v+"000000").replace(/[^\d]/gi, "").substr(0,14);
+                            break;
+                        case "":
+                            v=v.replace(/ +$/, "");
+                            break;
+                        default:
+                            v=parseFloat(v);
+                            if(v==="NaN")
+                                v=0;
+                        }
+                    }
+                    else{
+                        v="";
+                    }
+                }
+                else{
+                    if(v==null)
+                        v="";
+                    switch(typeof v){
+                    case "undefined":
+                        v="";
+                        break;
+                    case "boolean":
+                        v=(v ? "1" : "0");
+                        break;
+                    case "string":
+                        break;
+                    case "number":
+                        v=v.toString();
+                        break;
+                    default:
+                        if(v instanceof Date)
+                            v=v.getFullYear()+("00"+(v.getMonth()+1)).subright(2)+("00"+v.getDate()).subright(2)+("00"+v.getHours()).subright(2)+("00"+v.getMinutes()).subright(2)+("00"+v.getSeconds()).subright(2);
+                        else
+                            v="";
+                    }
+                    this.matrix[r-1][n]=v;
+                }
+                return v;
             }
             // CHIAMATA ALLA GENERAZIONE EFFETTIVA
             try{this.create();}catch(e){}
